syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="BankCardChangeManage";
//Generated By BrewRobot:Thu Dec 14 11:37:14 CST 2017

message PBIFE_bankcardmanage_changeBankCard{
	///ife/bankcardmanage/changeBankCard.html


}

message Ret_PBIFE_bankcardmanage_changeBankCard{
	///ife/bankcardmanage/changeBankCard.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_changeBankCard data=3;


}

message REQ_PBIFE_bankcardmanage_changeBankCard{
	///ife/bankcardmanage/changeBankCard.html

	string password = 1; //,交易密码,String,不校验,否,

	string bankCard = 2; //,银行卡号,String,不校验,否,

	string payChannelNo = 3; //,支付渠道,String,不校验,否,

	string checkCode = 4; //,短信验证码,String,不校验,否,

	string checkCodeSerialNo = 5; //,短信验证码流水,String,不校验,否,
	
	string faceId = 6; //,是否是人脸识别,String,不校验,否,1-人脸识别,0-非人脸识别

	string tencentfaceOrder = 7; //,腾讯人脸识别订单号


}